samples/_failures_safe/1761793381_9e6ada_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89364d45.c: In function ‘transform_bounds’:
./samples/SAFE/__tmp_89364d45.c:124:9: error: expected expression at end of input
  124 |         if (
      |         ^~
./samples/SAFE/__tmp_89364d45.c:124:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_89364d45.c:124:9: error: expected declaration or statement at end of input
